# tofuya-plugin-gitlab-states

./: .gitignore  Cargo.toml  Justfile  wkg-config.toml
.github/actions/install-dependencies/: action.yaml
.github/workflows/: wit.yml
src/: bindings.rs  lib.rs
wit/: world.wit
