[package]
name = "tofuya-plugin-gitlab-states"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
url = "2.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:tofuya-plugin-gitlab-states"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"tofuya:provider-gitlab" = { path = "wit/deps/tofuya-provider-gitlab-interface.wasm" }
"tofuya:plugin" = { path = "wit/deps/tofuya-plugin-interface.wasm" }
